feat: adds lines thing

--- a/public/sandbox/lines/index.html
+++ b/public/sandbox/lines/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <ul id="ui">
+      <li><strong>Controls:</strong></li>
       <li>up/down: <strong>opacity</strong></li>
       <li>left/right: <strong>complexity</strong></li>
       <li>enter: <strong>pause</strong></li>
