feat: preload imgs, cycle bg on click

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,17 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="preload" as="image" href="/img/bg/1.jpeg" />
+    <link rel="preload" as="image" href="/img/bg/2.jpeg" />
+    <link rel="preload" as="image" href="/img/bg/3.jpeg" />
+    <link rel="preload" as="image" href="/img/bg/4.jpeg" />
+    <link rel="preload" as="image" href="/img/bg/5.jpeg" />
+    <link rel="preload" as="image" href="/img/bg/6.jpeg" />
+    <link rel="preload" as="image" href="/img/bg/7.jpeg" />
+    <link rel="preload" as="image" href="/img/bg/8.jpeg" />
+    <link rel="preload" as="image" href="/img/bg/9.jpeg" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
