--- a/sandbox/heading-levels/index.html
+++ b/sandbox/heading-levels/index.html
@@ -12,7 +12,9 @@
       <h3 role="heading" aria-level="2">Test Heading h3 aria-level 2</h3>
       <div role="heading" aria-level="2">Test DIV as h2</div>
       <h3>Test Heading h3</h3>
-      <span role="heading" aria-level="4" style="display: none;">TEST SPAN as role 4 hidden</span>
+      <span role="heading" aria-level="4" style="display: none;"
+        >TEST SPAN as role 4 hidden</span
+      >
     </section>
 
     <section>
@@ -27,7 +29,9 @@
     <h2 role="heading" aria-level="1">Test error heading level h1</h2>
     <h3>Test error heading level h3</h3>
     <h4>TEST h4 goes here</h4>
-    <span role="heading" aria-level="3" style="display: none;">Error SPAN with role 3 hidden</span>
+    <span role="heading" aria-level="3" style="display: none;"
+      >Error SPAN with role 3 hidden</span
+    >
     <h5>Test Heading h5</h5>
     <h6>Test Heading h6</h6>
   </body>
